--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -1,22 +1,21 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: argoproj.io/v1alpha1
+kind: Application
 metadata:
   name: go-simple-webserver
-  labels:
-    app: go-simple-webserver
+  namespace: argocd
 spec:
-  replicas: 2
-  selector:
-    matchLabels:
-      app: go-simple-webserver
-  template:
-    metadata:
-      labels:
-        app: go-simple-webserver
-    spec:
-      containers:
-        - name: webserver
-          image: ghcr.io/antonstefan/ci_cd_lab:latest
-          ports:
-            - containerPort: 8080
+  project: default
+  source:
+    repoURL: https://github.com/AntonStefan/ci_cd_lab.git
+    targetRevision: HEAD
+    path: manifests
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: default
+  syncPolicy:
+    automated:
+      prune: true              # Optional: remove resources no longer tracked in Git
+      selfHeal: true           # Optional: fix out-of-sync resources automatically
+    syncOptions:
+      - CreateNamespace=true   # Optional: create namespace if it doesn't exist
 
