--- a/application.yaml
+++ b/application.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/AntonStefan/ci_cd_lab
+    repoURL: https://github.com/AntonStefan/ci_cd_lab.git
     targetRevision: HEAD
     path: manifests
   destination:
